# News-Guy

./: .gitignore  LICENSE  README.md  main.py  news_guy.md  pyproject.toml  requirements.txt  start_project.bat
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/api/v1/: api.py
app/api/v1/endpoints/: captions.py  questions.py  search.py
app/core/: security.py  settings.py
app/database/: init_db.py  models.py  session.py
app/models/: schemas.py
app/schemas/: models.py
app/services/: embeddings.py  gemini.py  youtube.py
app/utils/: logger.py
