[project]
name = "news-guy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "cachetools>=5.5.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "defusedxml>=0.7.1",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.2.0",
    "filelock>=3.18.0",
    "fsspec>=2025.3.2",
    "google-ai-generativelanguage>=0.6.15",
    "google-api-core>=2.24.2",
    "google-api-python-client>=2.167.0",
    "google-auth>=2.39.0",
    "google-auth-httplib2>=0.2.0",
    "google-generativeai>=0.8.5",
    "googleapis-common-protos>=1.70.0",
    "greenlet>=3.2.0",
    "grpcio>=1.71.0",
    "grpcio-status>=1.71.0",
    "h11>=0.14.0",
    "httplib2>=0.22.0",
    "huggingface-hub>=0.30.2",
    "idna>=3.10",
    "jinja2>=3.1.6",
    "joblib>=1.4.2",
    "markupsafe>=3.0.2",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=2.2.4",
    "packaging>=24.2",
    "pillow>=11.2.1",
    "proto-plus>=1.26.1",
    "protobuf>=5.29.4",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rsa>=4.9.1",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentence-transformers>=4.1.0",
    "setuptools>=78.1.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.40",
    "starlette>=0.46.2",
    "sympy>=1.13.3",
    "threadpoolctl>=3.6.0",
    "tokenizers>=0.21.1",
    "torch>=2.4.1",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "typing-extensions>=4.13.2",
    "typing-inspection>=0.4.0",
    "uritemplate>=4.1.1",
    "urllib3>=2.4.0",
    "uvicorn>=0.34.1",
    "youtube-transcript-api>=1.0.3",
]
